--- a/examples/README
+++ b/examples/README
@@ -31,18 +31,18 @@ Extract will skip any disk setup, and perform an installation
 to the directory specified by "installLocation=". This location
 should be a directory with your pre-mounted file-systems ready
 for file extraction. When using the "extract" option, /etc/fstab
-on the installed system will *not* be automatically configured. 
+on the installed system will *not* be automatically configured.
 
 'zfsrestore' will use zfs send / recv to replicate a remote ZFS
 dataset to your local install. It requires several other flags
-documented below in the ZFS RESTORE section. 
+documented below in the ZFS RESTORE section.
 
 # installLocation=
 
-Used only when installMode is set to extract. 
+Used only when installMode is set to extract.
 
 This is set to the location you want to extract your system to,
-and should already be mounted properly. 
+and should already be mounted properly.
 
 # installInteractive=(yes or no)
 
@@ -78,7 +78,7 @@ Set netMask to the address you with to have the interface specified in
 netDev set to
 Only used when netDev is not set to AUTO-DHCP
 
- 
+
 # netNameServer=(DNS Server such as 192.168.0.1)
 
 Set netNameServer to the DNS address you want to use during the install
@@ -98,7 +98,7 @@ netSaveDev specifies what networking to enable on the installed system
 
 When set to AUTO-DHCP, pc-sysinstall will probe all network interfaces, and
 set them all to DHCP in the systems /etc/rc.conf file. Wireless devices will also
-have the corresponding wlan[0-9] device created. 
+have the corresponding wlan[0-9] device created.
 
 When set to a network interface, pc-sysinstall will set the target device with
 the settings specified by the variables below.
@@ -116,18 +116,18 @@ the settings specified by the variables below.
 ########################################################################
 
 The following section specifies the target disk(s) to be used in the
-install or upgrade. 
+install or upgrade.
 
 # disk0=(disk device, such as ad0)
 
 The diskX= variable should be set to the target device for this drive, such
 as ad0, da0
 The first should begin with disk0=, and additional drives to disk1=, disk2
-if additional disks are to be setup. 
+if additional disks are to be setup.
 
-When doing an upgrade, the disk0= line should be set to the root device or 
+When doing an upgrade, the disk0= line should be set to the root device or
 root zpool of the target system to update. I.E:
- # disk0=tank0
+ # disk0=zroot0
  # disk0=ada0s1a
 
 
@@ -139,7 +139,7 @@ partition we will be working with for this device.
 Setting this to "all" will setup the disk with a single FreeBSD slice as "s1"
 
 Setting this to "free" will allow pc-sysinstall to search for the first available
-primary slice with free space, and create the slice. 
+primary slice with free space, and create the slice.
 
 Setting this to "s1, s2, s3 or s4" will use the specified MBR slice.
 
@@ -151,14 +151,14 @@ Setting this to "image" will use an image to configure the disk.
 
 When performing a "full" disk (partition=all), the partscheme= variable is used
 to determine the partition scheme type gpart will be using on the disk. Valid
-choices are MBR or GPT. 
+choices are MBR or GPT.
 
 # mirror=(disk device such as ad1)
 
 Setting the mirror= variable will setup the target device as a gmirror
 of the diskX= device. The mirror device must be the same size or larger
-than the drive being mirrored. 
- 
+than the drive being mirrored.
+
 
 # mirrorbal=(load, prefer, round-robin, split)
 
@@ -178,7 +178,7 @@ specified by the path to the disk.
 # commitDiskPart
 
 This command must be placed at the end of the diskX= section, before starting
-the listing of any additional diskX= directives. 
+the listing of any additional diskX= directives.
 
 
 ########################################################################
@@ -203,7 +203,7 @@ to create on the target drive / slice, specified by "disk0".
 The notation is as follows:
 <File System Type> <Size> <Mountpoint>
 
-Available FileSystems: 
+Available FileSystems:
   UFS - Standard UFS2 FileSystem
 UFS+S - UFS2 + Softupdates enabled
 UFS+SUJ - UFS2 + Soft Updates + Journaling enabled
@@ -220,7 +220,7 @@ the flag "encpass=" should be entered:
 encpass=mypass
 
 All sizes are expressed in MegaBytes
-Specifying a size 0 instructs pc-sysinstall to use the rest of the 
+Specifying a size 0 instructs pc-sysinstall to use the rest of the
 available slice size, and should only be used for the last partition / mount
 
 When using "UFS" and its various types, it is possible to specify custom options
@@ -318,8 +318,8 @@ Options specific to performing an upgrade
 # upgradeKeepDesktopProfile=(yes/no)
 
 This option allows you to specify if you wish to keep your existing users desktop
-profile data. The default is NO, and your existing profile will be moved to 
-.kde4.preUpgrade automatically. 
+profile data. The default is NO, and your existing profile will be moved to
+.kde4.preUpgrade automatically.
 
 ########################################################################
 # USER OPTIONS
@@ -423,7 +423,7 @@ localizeKeyVariant is used to update the xorg config to set the keyboard variant
 
 # autoLoginUser=kris
 
-Setting autoLoginUser will enable the specified user to log into the desktop 
+Setting autoLoginUser will enable the specified user to log into the desktop
 automatically without entering a password
 
 ########################################################################
@@ -448,11 +448,11 @@ Username to log into SSH with
 
 SSH key file to use with auth into the remote server
 
-# zfsProps=.lp-props-tank1#backups#krisbackup
+# zfsProps=.lp-props-zroot1#backups#krisbackup
 
 Location of dataset properties file, usually created by "Life-Preserver" during replication
 
-# zfsRemoteDataset=tank1/backups/krisbackup
+# zfsRemoteDataset=zroot1/backups/krisbackup
 
 Location of remote dataset we will be restoring from
 
